<resources>
    <string name="app_name">Carnot Problem</string>
    <string name="url_2">URL 2</string>
    <string name="url_4">URL 4</string>
    <string name="url_1">URL 1</string>
    <string name="url_3">URL 3</string>
    <string name="current_unix_timestamp">Current Unix Timestamp</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="start_save">Start Save:</string>
    <string name="end_save">End Save:</string>
</resources>
