<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/tv_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textColor="@color/colorTvTextBlack" />

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textColor="@color/colorTvTextBlack" />

        <TextView
            android:id="@+id/tv_start_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/start_save"
            android:textColor="@color/colorTvTextBlack" />

        <TextView
            android:id="@+id/tv_end_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/end_save"
            android:textColor="@color/colorTvTextBlack" />
    </LinearLayout>
</android.support.v7.widget.CardView>
